--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,8 @@
+/Canvas$1.class
+/Canvas.class
+/Doodle$1.class
 /Doodle.class
 /GamePanel.class
-/SouthPanel.class
-/Doodle$1.class
-/CenterPanel.class
-/LeftPanel.class
-/WestPanel.class
 /NorthPanel.class
+/SouthPanel.class
+/WestPanel.class
